# spatial-assocr

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  requirements-dev.txt  requirements.txt  run_ny.py  run_ny_eval_no_junk.py  run_ny_eval_restricted_diff_src.py  run_oc.py  run_oc_eval.py  run_oc_eval_no_junk.py  run_oc_eval_restricted_diff_src.py  setup.cfg  setup.py
DFRWS_EU_experiments/: run_ny.py  run_ny_eval.py
DFRWS_USA_experiments/: run_ny.py  run_oc.py
data/: mpp_month0a_month1b_n50.csv
kde/: learn_bw_and_densities.py  test.py
kde/data/: test_3plus.csv  validation.csv
kde/location_project/: cmp.py  kde_2d.py
kde/location_project/data_pre_processing/: __init__.py  (+2 more)
kde/pyemd/: LICENSE  __init__.py  setup.py
notebooks/: DFRWS_EU_2020.ipynb  DFRWS_USA_2020.ipynb  DFRWS_USA_2020_New_York.ipynb  DFRWS_USA_2020_Orange_County.ipynb  DFRWS_USA_figures.ipynb  ECE_plots.ipynb  MDC.ipynb  cmp exploration.ipynb  cmp_exploration.ipynb  earth_movers_distance.ipynb  gowalla.ipynb  kde_exploration.ipynb  new-york.ipynb  thesis_spatial_results.ipynb  thesis_temporal_results.ipynb  visits.ipynb
notebooks/cache/: api-26fdf48519eb024006303c9fca678ba88b10ac0f
notebooks/figs/: 1a.eps  1b.eps  3a.eps  3b.eps  4.eps  6a.eps  6b.eps  C2a.eps  C2b.eps  alpha_funcs.eps  motivating_example_data.csv  motivating_example_diff.eps  motivating_example_diff_B.eps  motivating_example_same.eps  motivating_example_same_B.eps  motivating_example_unknown.eps  tempmap.html
thesis_experiments/: run_mdc.py  run_ny.py  run_oc.py  run_socal_gowalla.py
(+66 files in other folders)
