[metadata]
name = spatial-assocr
version = 0.0.1
description = spatial association experiments
long_description = file: README.md
author = “Chris Galbraith, Alex Boyd, Moshe Lichman”
url = https://github.com/galbraic/spatial-assocr

[options]
zip_safe = False
include_package_data = True
packages = find:
